--- a/messManager/src/main/resources/templates/manager/view_bazar_sequence.html
+++ b/messManager/src/main/resources/templates/manager/view_bazar_sequence.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="member/base::Layout(~{::section})">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="manager/base::Layout(~{::section})">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
