--- a/messManager/src/main/resources/templates/manager/add_bazar_sequence.html
+++ b/messManager/src/main/resources/templates/manager/add_bazar_sequence.html
@@ -56,7 +56,7 @@
                             <!--start date-->
                             <div class="form-group" data-provide="datepicker">
                                 <label for="startDate_field">start date:</label>
-                                <input name="startDate" type="date" class="form-control" data-date-format="yyyy-MM-dd"
+                                <input name="startDate" type="date" class="form-control"
                                        id="startDate_field" placeholder="enter here" required th:value="${BazarSequence.startDate}"/>
 
                             </div>
@@ -64,7 +64,7 @@
                             <!--end date-->
                             <div class="form-group">
                                 <label for="endDate_field">end date:</label>
-                                <input name="endDate" type="date" class="form-control" data-date-format="yyyy-MM-dd"
+                                <input name="endDate" type="date" class="form-control"
                                        id="endDate_field" placeholder="enter here" required th:value="${BazarSequence.endDate}"/>
 
                             </div>
